--- a/src/pages/Calculator/styles.css
+++ b/src/pages/Calculator/styles.css
@@ -1,28 +1,43 @@
+.container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+
 .calculator {
-    width: 290px;
+    display: block;
+    padding: 0 12px 6px;
+    width: max-content;
+    height: max-content;
     background-color: #000;
-    border-radius: .2rem;
-    padding: 5px 0;
+    border-radius: .5rem;
 }
 
 .calculator-header {
-    height: 60px;
-    font-size: 2rem;
-    color: #fff;
     display: flex;
     justify-content: right;
     align-items: center;
     padding-right: 10px;
+    height: 90px;
+    color: #fff;
+    font-size: 2rem;
 }
+
 .calculator-body {
     display: grid;
-    grid-gap: 5px 5px;
-    grid-template-columns: auto auto auto;
+}
+
+.calculator-body .ac {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
 }
 
 .calculator-body .numbers {
     display: grid;
-    grid-gap: 5px 5px;
     grid-template-columns: auto auto auto;
     grid-row-start: 2;
 }
@@ -31,10 +46,4 @@
     display: grid;
     grid-row-start: 1;
     grid-row-end: 3;
-}
-
-.calculator-body .ac {
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
 }
