--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,8 +1,19 @@
 .button-calculator {
-    margin: 0.1rem;
-    width: 4rem;
-    height: 4rem;
+    margin: 0.3rem;
     font-size: 1.3rem;
     border: none;
+}
+
+.button-calculator.col-1 {
+    width: 4rem;
+    height: 4rem;
     border-radius: 50%;
+}
+
+.button-calculator.col-2 {
+    border-radius: 2rem;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    text-align: left;
+    padding-left: 1.5rem;
 }
