--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -17,3 +17,8 @@
     text-align: left;
     padding-left: 1.5rem;
 }
+
+.button-calculator:disabled {
+    opacity: 0.2;
+    cursor: not-allowed;
+}
